@@ -3,9 +3,12 @@
     * The following fields and methods in the IO::Socket class are changed.
       
       -  has timeout : protected ro int;
-      +  has Timeout : int;
-      
+      +  has Timeout : protected int;
       + method timeout : int ();
+      
+      -  has sockdomain : protected ro int;
+      +  has Domain : protected int;
+      + method sockdomain : int ();
       
 0.206 2023-09-04
   [Prerequirement Changes]
